force-app/main/default/objects/RepresentanteNaturezaOperacao__c/RepresentanteNaturezaOperacao__c.object-meta.xml
<CustomObject>
    <label>Representante &amp; Natureza de Operação</label>
    <nameField>
        <displayFormat>Relação - {000000}</displayFormat>
        <label>N° Relação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Representantes &amp; Naturezas de Operação</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>