force-app/main/default/objects/RepresentanteNaturezaOperacao__c/fields/CodigoNatOperacaoRepresentante__c.field-meta.xml
<CustomField>
    <fullName>CodigoNatOperacaoRepresentante__c</fullName>
    <description>Nat Operação x Representante</description>
    <externalId>true</externalId>
    <label>Código Nat Operação x Representante</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>