force-app/main/default/objects/RepresentanteNaturezaOperacao__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>Representante</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Representantes &amp; Naturezas de Operação</relationshipLabel>
    <relationshipName>RepresentantesNaturezasOperacao</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>