force-app/main/default/objects/RepresentanteNaturezaOperacao__c/fields/NaturezaOperacaoId__c.field-meta.xml
<CustomField>
    <fullName>NaturezaOperacaoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natureza de Operação</label>
    <referenceTo>NaturezaOperacao__c</referenceTo>
    <relationshipLabel>Representantes &amp; Naturezas de Operação</relationshipLabel>
    <relationshipName>RepresentantesNaturezasOperacao</relationshipName>
    <type>Lookup</type>
</CustomField>